--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Responsive Image Galery</title>
+    <link rel="stylesheet" href="./Styles/styles.css" />
+    <body>
+      <header>
+        <h1>Responsive Image Galery</h1>
+      </header>
+      <main>
+        <div>
+          <div>
+            <img
+              src="./img/landscapeNightfall.jpg"
+              alt="Landscape Mountais"
+            />
+          </div>
+          <div>
+            <img
+              src="./img/landscapeRoad.jpg"
+              alt="Landscape Mountais"
+            />
+          </div>
+          <div>
+            <img
+              src="./img/landscapeRoadHighTree.jpg"
+              alt="Landscape Mountais"
+            />
+          </div>
+          <div>
+            <img
+              src="./img/landscapeSnowyMountain.jpg"
+              alt="Landscape Mountais"
+            />
+          </div>
+          <div>
+            <img
+              src="./img/landscapeSnowyWatterfall.jpg"
+              alt="Landscape Mountais"
+            />
+          </div>
+          <div>
+            <img
+              src="./img/landscapeWaterfall.jpg"
+              alt="Landscape Mountais"
+            />
+          </div>
+          <div>
+            <img
+              src="./img/landscapeMountains.jpg"
+              alt="Landscape Mountais"
+            />
+          </div>
+        </div>
+      </main>
+      <footer></footer>
+    </body>
+  </head>
 </html>
