--- a/index.html
+++ b/index.html
@@ -10,49 +10,15 @@
         <h1>Responsive Image Galery</h1>
       </header>
       <main>
-        <div>
-          <div>
-            <img
-              src="./img/landscapeNightfall.jpg"
-              alt="Landscape Mountais"
-            />
-          </div>
-          <div>
-            <img
-              src="./img/landscapeRoad.jpg"
-              alt="Landscape Mountais"
-            />
-          </div>
-          <div>
-            <img
-              src="./img/landscapeRoadHighTree.jpg"
-              alt="Landscape Mountais"
-            />
-          </div>
-          <div>
-            <img
-              src="./img/landscapeSnowyMountain.jpg"
-              alt="Landscape Mountais"
-            />
-          </div>
-          <div>
-            <img
-              src="./img/landscapeSnowyWatterfall.jpg"
-              alt="Landscape Mountais"
-            />
-          </div>
-          <div>
-            <img
-              src="./img/landscapeWaterfall.jpg"
-              alt="Landscape Mountais"
-            />
-          </div>
-          <div>
-            <img
-              src="./img/landscapeMountains.jpg"
-              alt="Landscape Mountais"
-            />
-          </div>
+        <div class="grid-container">
+          <img src="./img/landscapeCity.jpg" alt="Landscape Mountais" />
+          <img src="./img/landscapeCloudy.jpg" alt="Landscape Mountais" />
+          <img src="./img/landscapeField.jpg" alt="Landscape Mountais" />
+          <img src="./img/landscapeLake.jpg" alt="Landscape Mountais" />
+          <img src="./img/landscapeMountain.jpg" alt="Landscape Mountais" />
+          <img src="./img/landscapeNightfall.jpg" alt="Landscape Mountais" />
+          <img src="./img/landscapeNightfallCity.jpg" alt="Landscape Mountais"/>
+          <img src="./img/landscapeTower.jpg" alt="Landscape Mountais" />
         </div>
       </main>
       <footer></footer>
